--- a/assets/sass/_pages/_dashboard.scss
+++ b/assets/sass/_pages/_dashboard.scss
@@ -9,9 +9,20 @@
 #ash-nazg-connection-mode-toggle {
 	display: inline-block;
 	margin-left: $spacing-md;
+	vertical-align: middle;
+
+	.button {
+		padding: $spacing-xs $spacing-md;
+		font-size: $font-size-small;
+		height: auto;
+		line-height: 1.2;
+	}
 
 	.dashicons {
-		margin-top: 3px;
+		font-size: 14px;
+		width: 14px;
+		height: 14px;
+		vertical-align: middle;
 	}
 }
 
@@ -36,11 +47,29 @@
 }
 
 /* API Endpoints tab links - remove underline */
-.ash-nazg-card .nav-tab-wrapper .nav-tab {
-	text-decoration: none;
+.ash-nazg-card .nav-tab-wrapper {
+	margin-bottom: 0;
+
+	.nav-tab {
+		text-decoration: none;
+
+		&:hover,
+		&:focus {
+			text-decoration: none;
+		}
+	}
 }
 
-.ash-nazg-card .nav-tab-wrapper .nav-tab:hover,
-.ash-nazg-card .nav-tab-wrapper .nav-tab:focus {
-	text-decoration: none;
+/* API Endpoints tab content - add top padding */
+.ash-nazg-card .nav-tab-wrapper + table {
+	margin-top: $spacing-xl;
+}
+
+/* Refresh Data button icon alignment */
+#ash-nazg-refresh-endpoints .dashicons {
+	font-size: 16px;
+	width: 16px;
+	height: 16px;
+	vertical-align: middle;
+	margin-top: -2px;
 }
